--- a/tasks/clone.yml
+++ b/tasks/clone.yml
@@ -27,14 +27,14 @@
 - name: python project pip requirements
   pip:
     requirements: "{{ python_requirements_file.stat.path }}"
-    virtualenv: "{{ github_repository.virtualenv | default(omit) }}"
+    virtualenv: "{{ github_repository.pip_virtualenv_path | default(omit) }}"
     virtualenv_command: "{{ ansible_facts.python.executable }} -m venv "
   when: github_repository.project_type == 'python' and python_requirements_file.stat.path is defined
 
 - name: python project extra requirements
   pip:
     name: "{{ github_repository.pip_extra_packages }}"
-    virtualenv: "{{ github_repository.virtualenv | default(omit) }}"
+    virtualenv: "{{ github_repository.pip_virtualenv_path | default(omit) }}"
     virtualenv_command: "{{ ansible_facts.python.executable }} -m venv "
   when: github_repository.project_type == 'python' and github_repository.pip_extra_packages is defined
 
